--- a/public/views/master.html
+++ b/public/views/master.html
@@ -3,10 +3,15 @@
 <head>
   <title>Hello world</title>
   <link href="/public/favicon.ico" rel="icon" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="/public/css/style.css">
 </head>
 <body>
 
-  <h1>Hi, there!</h1>
+  <div class="Aligner">
+    <div class="Aligner-item">
+      <h1>Hi, there.</h1>
+    </div>
+  </div>
 
 </body>
 </html>
