Add demo controller

--- a/public/views/master.html
+++ b/public/views/master.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <title>Hello world</title>
-  <link href="/public/favicon.ico" rel="icon" type="image/x-icon" />
-  <link rel="stylesheet" type="text/css" href="/public/css/style.css">
+  <link href="/favicon.ico" rel="icon" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 
   <div class="Aligner">
     <div class="Aligner-item">
       <h1>Hi, there.</h1>
+      <a href="/list">List</a> | <a href="/new">Create</a>
     </div>
   </div>
 
