--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,21 @@
 .x-ng-cloak {
     display: none !important;
 }
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.Aligner {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Aligner-item {
+  max-width: 50%;
+  text-align: center;
+}
